@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 04-02-2005 added: windows media player playlists
   - 04-02-2005 fixed: subtitle/osd crash with high quality pixel shader
   - 04-02-2005 added: High quality pixel shader YV12->RGB method :)  Known issues with switching to/from GUI
   - 03-02-2005 changed: delay when changing resolution in settings (easier resolution selection)
